--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,14 +2,14 @@ name: Deploy docs
 
 on:
   push:
-    brances:
-      - main
+    branches:
+      - master
 
 jobs:
-  build-and-deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Node.js
