--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignite-ui/ts-config",
-  "version": "1.0.0",  
+  "name": "@fagnerweb-ignite-ui/ts-config",
+  "version": "1.0.0",
   "license": "MIT",
   "private": true
 }
