--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@fagnerweb-ignite-ui/eslint-config",
+  "version": "1.0.0",
   "license": "ISC",
   "private": true,
   "main": "index.js",
