--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: RjA3ce6gvq0FEyDP19cBc1i7
+          TURBO_TEAM: fagnerweb
 
       - name: Deploy storybook
         working-directory: ./packages/docs
