--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=!docs && changeset publish"
+    "release": "turbo run build --filter=!@fagnerweb-ignite-ui/docs && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
-    "turbo": "^1.1.5"
+    "turbo": "^1.6.3"
   }
 }
